@@ -2,6 +2,14 @@
 
 	* Makefile.am (CURRENT, AGE): Increment. Swarm 1.3.1 released.
 
+	* Arguments.m ([Arguments -_getSwarmHome_:], [Arguments
+	-getSwarmHome]): New method takes code of getSwarmHome, except it
+	calls returns findSwarm if argument is set.
+	([Arguments -_getPath_:subpath:]): Use ignoringEnvFlag to
+	get the SWARMHOME recognized by _runningFromInstall_.
+
+	* Arguments.h (Arguments): New ivar ignoringEnvFlag.
+
 	* swarm_rts_routines.[hm] (skip_offset, skip_type_qualifiers): 
 	Don't inline, this causes gratuitious warning messages from egcs.
 
